[package]
name = "authdecode_lookup"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
halo2_middleware = { git = "https://github.com/privacy-scaling-explorations/halo2", default-features = false, rev = "9eedeb5d"}
halo2_backend = { git = "https://github.com/privacy-scaling-explorations/halo2", default-features = false, rev = "9eedeb5d"}
halo2_frontend = { git = "https://github.com/privacy-scaling-explorations/halo2", default-features = false, rev = "9eedeb5d"}
halo2_proofs = { git = "https://github.com/privacy-scaling-explorations/halo2", default-features = false, rev = "9eedeb5d"}

halo2curves = { version = "0.6.0", default-features = false }
rand_core = { version = "0.6", default-features = false, features = ["getrandom"] }
plotters = { version = "0.3.0", default-features = false, optional = true }
ff = "0.13"
group = "0.13"
tracing = "0.1"
rand_chacha = "0.3"
rayon = "1.8"
assert_matches = "1.5"
criterion = "0.3"
gumdrop = "0.8"
proptest = "1"
dhat = "0.3.2"
serde_json = "1"
thiserror = "1.0.56"
rand = "0.8.5"
